@@ -1,4 +1,5 @@
 - Added support for colorized output on Windows.
+- Added an option to skip success dialog.
 
 ver 0.6.5
 - Added support for Solaris/illumos.
